Адаптив под все разрешения экрана

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -14,26 +14,28 @@
                     <input type="text" placeholder="+7">
                     <input type="text" placeholder="Пароль">
                 </div>
-                <div class="register-cheked">
-                    <label class="check-btn-label">
-                        <input type="checkbox" class="check-input">
-                        <span class="custom-checkbox"></span>
-                        <span class="btn-text">Согласие на обработку персональных данных</span>
-                    </label>
-                </div>
-                <div class="register-cheked">
-                    <label class="check-btn-label">
-                        <input type="checkbox" class="check-input">
-                        <span class="custom-checkbox"></span>
-                        <span class="btn-text">Договор публичной оферты</span>
-                    </label>
-                </div>
-                <div class="register-cheked">
-                    <label class="check-btn-label">
-                        <input type="checkbox" class="check-input">
-                        <span class="custom-checkbox"></span>
-                        <span class="btn-text">Политика конфиденциальности</span>
-                    </label>
+                <div class="register-span">
+                    <div class="register-cheked">
+                        <label class="check-btn-label">
+                            <input type="checkbox" class="check-input">
+                            <span class="custom-checkbox"></span>
+                            <span class="btn-text">Согласие на обработку персональных данных</span>
+                        </label>
+                    </div>
+                    <div class="register-cheked">
+                        <label class="check-btn-label">
+                            <input type="checkbox" class="check-input">
+                            <span class="custom-checkbox"></span>
+                            <span class="btn-text">Договор публичной оферты</span>
+                        </label>
+                    </div>
+                    <div class="register-cheked">
+                        <label class="check-btn-label">
+                            <input type="checkbox" class="check-input">
+                            <span class="custom-checkbox"></span>
+                            <span class="btn-text">Политика конфиденциальности</span>
+                        </label>
+                    </div>
                 </div>
                 <button class="login-form-btn">Зарегистрироваться</button>
             </div>
